[package]
name = "rust-project"
version = "0.0.0"
description = ""
authors = ["Jarrod Overson"]
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
vino-provider = { path = "../../../../vino/sdk/crates/vino-provider/", features = [
  "wasm",
] }

[dev-dependencies]
